fix: fix inserting hard break with Shift+Enter shortcut after paragraph

--- a/projects/editor/components/editor-socket/editor-socket.component.less
+++ b/projects/editor/components/editor-socket/editor-socket.component.less
@@ -35,10 +35,6 @@
         margin-top: 0;
     }
 
-    br + br.ProseMirror-trailingBreak {
-        display: none;
-    }
-
     img.ProseMirror-separator + .ProseMirror-trailingBreak,
     img.ProseMirror-separator {
         display: none !important;
